@@ -1,5 +1,5 @@
 ## -*- truncate-lines: t; fill-column: 65; comment-column: 50; -*-
-## Time-stamp: <2015-10-20 13:53:00 CEST (es)>
+## Time-stamp: <2015-11-05 15:57:28 CET (es)>
 
 
                                         # DATES
@@ -77,6 +77,15 @@ endOfMonth <- function(x, shift = 0L) {
         stop("input must inherit from class Date or POSIXt")
     tmp <- as.POSIXlt(x)
     tmp$mon <- tmp$mon + 1L + shift
+    tmp$mday <- 1L
+    as.Date(tmp) - 1L
+}
+
+endOfYear <- function(x, shift = 0L) {
+    if (!all(inherits(x,"Date") | inherits(x,"POSIXt")))
+        stop("input must inherit from class Date or POSIXt")
+    tmp <- as.POSIXlt(x)
+    tmp$mon <- 12+shift
     tmp$mday <- 1L
     as.Date(tmp) - 1L
 }
