@@ -1,3 +1,9 @@
+2015-12-09  Enrico Schumann  <enrico.schumann@aq-investment.ch>
+
+	* DESCRIPTION (Version): Version: 0.1-0
+
+	* R/functions.R (endOfYear): new function
+
 2015-10-29  Enrico Schumann  <es@enricoschumann.net>
 
 	* man/rfc822t.Rd: doc update
